added all event listeners

--- a/index.html
+++ b/index.html
@@ -11,44 +11,45 @@
 
             <div id='keyboard'>
                 <div class='row'>
-                    <p>A</p>
-                    <p>B</p>
-                    <p>C</p>
-                    <p>D</p>
-                    <p>E</p>
-                    <p>F</p>
-                    <p>G</p>
-                    <p>H</p>
-                    <p>I</p>
+                    <div class=' button letter'>A</div>
+                    <div class=' button letter'>B</div>
+                    <div class=' button letter'>C</div>
+                    <div class=' button letter'>D</div>
+                    <div class=' button letter'>E</div>
+                    <div class=' button letter'>F</div>
+                    <div class=' button letter'>G</div>
+                    <div class=' button letter'>H</div>
+                    <div class=' button letter'>I</div>
                 </div>
                 <div class='row'>
-                    <p>J</p>
-                    <p>K</p>
-                    <p>L</p>
-                    <p>M</p>
-                    <p>N</p>
-                    <p>O</p>
-                    <p>P</p>
-                    <p>Q</p>
-                    <p>R</p>
+                    <div class=' button letter'>J</div>
+                    <div class=' button letter'>K</div>
+                    <div class=' button letter'>L</div>
+                    <div class=' button letter'>M</div>
+                    <div class=' button letter'>N</div>
+                    <div class=' button letter'>O</div>
+                    <div class=' button letter'>P</div>
+                    <div class=' button letter'>Q</div>
+                    <div class=' button letter'>R</div>
                 </div>
                 <div class='row'>
-                    <p>S</p>
-                    <p>T</p>
-                    <p>U</p>
-                    <p>V</p>
-                    <p>W</p>
-                    <p>X</p>
-                    <p>Y</p>
-                    <p>Z</p>
+                    <div class=' button letter'>S</div>
+                    <div class=' button letter'>T</div>
+                    <div class=' button letter'>U</div>
+                    <div class=' button letter'>V</div>
+                    <div class=' button letter'>W</div>
+                    <div class=' button letter'>X</div>
+                    <div class=' button letter'>Y</div>
+                    <div class=' button letter'>Z</div>
                 </div>
                 <div class='row'>
-                    <p>space</p>
-                    <p>backspace</p>
+                    <div class=' button' id='space'>space</div>
+                    <div class=' button' id='clear'>clear</div>
                 </div>
 
             </div>
 
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
